// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col alignment should have the correct styles when alignment set to centre 1`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: center;
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col alignment should have the correct styles when alignment set to left 1`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col alignment should have the correct styles when alignment set to right 1`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: right;
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col alignment should have the correct styles when vertical alignment set to middle 1`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    Hello
  </div>
</div>
`;

exports[`Col lg should have the correct styles when size is set 1`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
}

@media (min-width:992px) {
  .c0 {
    grid-column: span 6;
  }
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col lg should have the correct styles when size is set 2`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
}

@media (min-width:992px) {
  .c0 {
    grid-column: 4 / span 6;
  }
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col md should have the correct styles when size is set 1`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
}

@media (min-width:768px) {
  .c0 {
    grid-column: span 6;
  }
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col md should have the correct styles when size is set 2`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
}

@media (min-width:768px) {
  .c0 {
    grid-column: 4 / span 6;
  }
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col sm should have the correct styles when size is set 1`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
}

@media (min-width:576px) {
  .c0 {
    grid-column: span 6;
  }
}

<div
  class="c0"
>
  Hello
</div>
`;

exports[`Col sm should have the correct styles when size is set 2`] = `
.c0 {
  grid-column: span 12;
  position: relative;
  text-align: left;
}

@media (min-width:576px) {
  .c0 {
    grid-column: 4 / span 6;
  }
}

<div
  class="c0"
>
  Hello
</div>
`;
